Fixed forum overlap, forum clearing
Started working on fourm spacing

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,11 +6,11 @@ body {
 
 
 
-.main-head{
-    height: 150px;
-    background: #FFF;
-
-}
+// .main-head{
+//     height: 150px;
+//     background: #FFF;
+//
+// }
 
 .sidenav {
     height: 100%;
@@ -52,7 +52,7 @@ body {
     }
 
     .login-form{
-        margin-top: 80%;
+        margin-top: 50%;
     }
 
     .register-form{
@@ -60,11 +60,11 @@ body {
     }
 }
 
-.words {
-  margin-top: 20%;
-  padding: 60px;
-  color: #fff;
-}
+// .words {
+//   margin-top: 20%;
+//   padding: 60px;
+//   color: #fff;
+// }
 
 .login-main-text{
     margin-top: 20%;
